Sidebar contrast issues PT-1078

--- a/docs/.vuepress/theme/styles/base.pcss
+++ b/docs/.vuepress/theme/styles/base.pcss
@@ -78,25 +78,25 @@ img {
   &.up {
     border-left: 4px solid transparent;
     border-right: 4px solid transparent;
-    border-bottom: 6px solid #ccc;
+    border-bottom: 6px solid currentColor;
   }
 
   &.down {
     border-left: 4px solid transparent;
     border-right: 4px solid transparent;
-    border-top: 6px solid #ccc;
+    border-top: 6px solid currentColor;
   }
 
   &.right {
     border-top: 4px solid transparent;
     border-bottom: 4px solid transparent;
-    border-left: 6px solid #ccc;
+    border-left: 6px solid currentColor;
   }
 
   &.left {
     border-top: 4px solid transparent;
     border-bottom: 4px solid transparent;
-    border-right: 6px solid #ccc;
+    border-right: 6px solid currentColor;
   }
 }
 
